done supervisor section (i think)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <section class="product-section" id="supervisor-section">
     <h1>Supervisor</h1>
     <p>Monitors activity to identify project roadblocks</p>
+    <img src="images/icon-supervisor.svg">
   </section>
 
 
