--- a/index.html
+++ b/index.html
@@ -26,15 +26,26 @@
     <img src="images/icon-supervisor.svg">
   </section>
 
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+  <section class="product-section" id="team-builder-section">
+    <h1>Team Builder</h1>
+    <p>Scans our talent network to create the optimal team for your project</p>
+    <img src="images/icon-team-builder.svg">
+  </section>
+  
+  <section class="product-section" id="karma-section">
+    <h1>Karma</h1>
+    <p>Regularly evaluates our talent to ensure quality
+</p>
+    <img src="images/icon-karma.svg">
+  </section>
+  
+  <section class="product-section" id="calculator-section">
+    <h1>Calculator</h1>
+    <p>Uses data from past projects to provide better delivery estimates</p>
+    <img src="images/icon-calculator.svg">
+  </section>
+  
+  
 
   
   <footer>
