--- a/index.html
+++ b/index.html
@@ -13,38 +13,41 @@
 </head>
 <body>
   
-  <p id="tagline-top">Reliable, efficient delivery</p>
-  <p id="tagline-bottom">Powered by Technology</p>
-
-  <p id="intro">Our Artificial Intelligence powered tools use millions of project data points 
+  <div id="intro-area">
+    <p id="tagline-top">Reliable, efficient delivery</p>
+    <p id="tagline-bottom">Powered by Technology</p>
+    <p id="intro">Our Artificial Intelligence powered tools use millions of project data points 
   to ensure that your project is successful</p>
+  </div>
 
 
-  <section class="product-section" id="supervisor-section">
-    <h1>Supervisor</h1>
-    <p>Monitors activity to identify project roadblocks</p>
-    <img src="images/icon-supervisor.svg">
-  </section>
 
-  <section class="product-section" id="team-builder-section">
-    <h1>Team Builder</h1>
-    <p>Scans our talent network to create the optimal team for your project</p>
-    <img src="images/icon-team-builder.svg">
-  </section>
-  
-  <section class="product-section" id="karma-section">
-    <h1>Karma</h1>
-    <p>Regularly evaluates our talent to ensure quality
-</p>
-    <img src="images/icon-karma.svg">
-  </section>
-  
-  <section class="product-section" id="calculator-section">
-    <h1>Calculator</h1>
-    <p>Uses data from past projects to provide better delivery estimates</p>
-    <img src="images/icon-calculator.svg">
-  </section>
-  
+
+  <div id="cards">
+    <section class="product-section" id="supervisor-section">
+      <h1>Supervisor</h1>
+      <p>Monitors activity to identify project roadblocks</p>
+      <img src="images/icon-supervisor.svg">
+    </section>
+
+    <section class="product-section" id="team-builder-section">
+      <h1>Team Builder</h1>
+      <p>Scans our talent network to create the optimal team for your project</p>
+      <img src="images/icon-team-builder.svg">
+    </section>
+
+    <section class="product-section" id="karma-section">
+      <h1>Karma</h1>
+      <p>Regularly evaluates our talent to ensure quality</p>
+      <img src="images/icon-karma.svg">
+    </section>
+
+    <section class="product-section" id="calculator-section">
+      <h1>Calculator</h1>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+      <img src="images/icon-calculator.svg">
+    </section>
+  </div>  
   
 
   
